...
                                    unselectedIconColor = Color.DarkGray,
                                    unselectedTextColor = Color.DarkGray
                            ),
                    icon = {
                        Icon(
                                Icons.Filled.MusicNote,
                                contentDescription = "Albums",
                                tint = Color.Black
                        )
                    },
                    alwaysShowLabel = true
            )

...
